Fixed overlapping of bottom nav bar

--- a/public/css/QuestionView.css
+++ b/public/css/QuestionView.css
@@ -11,7 +11,9 @@ header{
 }
 
 section{
+    height: 35%;
     flex-direction: column;
+    overflow: auto;
 }
 
 .answers-label{
@@ -43,7 +45,10 @@ hr{
     padding-bottom: 16px;
     color: var(--dark-primary-color);
 }
-
+.answer-holder{
+    position: fixed;
+    overflow: auto;
+}
 .answer-view{
     padding: 16px;
     margin-left: 16px;
@@ -53,6 +58,7 @@ hr{
     display: flex;
     justify-content: space-between;
     transition: 0.3s;
+    overflow: auto;
 }
 .div-part1{
     width: 60%;
@@ -122,7 +128,7 @@ hr{
 
 .text-input textarea{
     width: 99%;
-    height: 200px;
+    height: 150px;
     resize: vertical;
 }
 
@@ -151,13 +157,14 @@ hr{
 }
 
 #output {
-	height: 200px; 
+	height: 180px; 
 	box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 	margin-top: 1rem;
 	padding: 0rem;
 }
 
 .bottom-navbar {
+    height: 65%;
     background-color: rgb(255, 255, 255);
     overflow: hidden;
     position: fixed;
